[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alt-data-trading"
version = "0.1.0"
description = "Alternative data anomaly detection and geopolitical trading system"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "anthropic>=0.40",
    "py-clob-client>=0.15",
    "numpy>=1.26",
    "structlog>=24.1",
    "pydantic>=2.5",
    "python-telegram-bot>=21.0",
    "requests>=2.31",
    "yfinance>=0.2.36",
    "web3>=6.15",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
